<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".fragment.ProfileFragment">

    <ImageView
        android:id="@+id/profilePhoto"
        android:layout_width="172dp"
        android:layout_height="186dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@mipmap/profile_icon" />

    <TextView
        android:id="@+id/profileName"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_below="@id/profilePhoto"
        android:text="@string/name"
        android:textSize="16sp"
        android:textStyle="bold"
        android:background="#ffffff"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/profileMobileNumber"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_below="@id/profileName"
        android:text="@string/mobilenumber"
        android:textSize="16sp"
        android:textStyle="bold"
        android:background="#ffffff"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/profileEmail"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_below="@id/profileMobileNumber"
        android:text="@string/email"
        android:textSize="16sp"
        android:textStyle="bold"
        android:background="#ffffff"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/profileDelievery"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_below="@id/profileEmail"
        android:text="@string/DelieveryAddress"
        android:background="#ffffff"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>