<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".fragment.LoginFragment">


    <ImageView
        android:id="@+id/applogo"
        android:layout_width="match_parent"
        android:layout_height="161dp"
        android:src="@mipmap/app_logo" />

    <EditText
        android:id="@+id/mobileNumberLogin"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_below="@+id/applogo"
        android:layout_marginTop="14dp"
        android:background="#ffffff"
        android:layout_centerInParent="true"
        android:drawableLeft="@drawable/ic_action_mobile"
        android:drawablePadding="10dp"
        android:hint="@string/mobilenumber"
        android:inputType="phone"
        android:maxLength="10"/>

    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_below="@+id/mobileNumberLogin"
        android:background="#ffffff"
        android:layout_centerInParent="true"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_action_password"
        android:drawablePadding="10dp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_below="@id/passwordLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="Login"
        android:background="@color/colorPrimaryDark"
        android:textColor="#ffffff"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_below="@id/buttonLogin"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/dontHaveAnAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotPassword"
        android:layout_marginTop="150dp"
        android:layout_centerHorizontal="true"
        android:text="Don't have an account? Sign up now "
        android:textSize="15sp"
        android:textColor="#ffffff"/>

    <ProgressBar
        android:id="@+id/progressBarLogin"
        style="?android:attr/progressBarStyle"
        android:layout_below="@id/passwordLogin"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>